tests/data/cloud_custodian/aws/eu-central-1/ecc-aws-070-unused_ec2_security_groups/metadata.json
{
  "policy": {
    "name": "ecc-aws-070-unused_ec2_security_groups",
    "resource": "security-group",
    "description": "Description for ecc-aws-070-unused_ec2_security_groups"
  },
  "version": "0.9.40",
  "execution": {
    "id": "89fbbee4-c43a-4ff1-b311-607b7b479ea8",
    "start": 1729253751.923907,
    "end_time": 1729253757.393474,
    "duration": 5.469567060470581
  },
  "config": {
    "region": "eu-central-1",
    "regions": [
      "all"
    ],
    "cache": "cloud-custodian.cache",
    "profile": null,
    "account_id": "123456789012",
    "assume_role": null,
    "session_policy": null,
    "external_id": null,
    "log_group": null,
    "tracer": "default",
    "metrics_enabled": false,
    "metrics": null,
    "output_dir": "./eu-central-1",
    "cache_period": 120,
    "dryrun": false,
    "authorization_file": null,
    "command": "c7n.commands.run",
    "config": null,
    "configs": [],
    "subparser": "run",
    "policy_filters": [],
    "resource_types": [],
    "verbose": null,
    "quiet": false,
    "debug": false,
    "skip_validation": false,
    "vars": null
  },
  "sys-stats": {
    "snapshot_time": 5.4695940017700195,
    "cache_size": 4096,
    "num_fds": -1,
    "cpu_user": 0.40218240000000005,
    "cpu_system": 0.06173913600000003,
    "num_ctx_switches_voluntary": 1301,
    "rss": 294912,
    "pfaults": 343
  },
  "api-stats": {
    "ec2.DescribeNetworkInterfaces": 1,
    "lambda.ListFunctions": 1,
    "autoscaling.DescribeLaunchConfigurations": 1,
    "events.ListRules": 1,
    "events.ListTargetsByRule": 22,
    "codebuild.ListProjects": 1,
    "codebuild.BatchGetProjects": 1,
    "tagging.GetResources": 1,
    "batch.DescribeComputeEnvironments": 1,
    "ec2.DescribeSecurityGroupReferences": 1
  },
  "metrics": [
    {
      "MetricName": "ResourceCount",
      "Timestamp": "2024-10-18T15:15:57.390324",
      "Value": 3,
      "Unit": "Count"
    },
    {
      "MetricName": "ResourceTime",
      "Timestamp": "2024-10-18T15:15:57.390335",
      "Value": 5.4660117626190186,
      "Unit": "Seconds"
    },
    {
      "MetricName": "ActionTime",
      "Timestamp": "2024-10-18T15:15:57.393453",
      "Value": 5.7220458984375e-06,
      "Unit": "Seconds"
    }
  ]
}
